Fix calc view bugs on mobile.

--- a/styles/sections/my-works-section.scss
+++ b/styles/sections/my-works-section.scss
@@ -74,9 +74,9 @@
 
 .calc-screen {
     grid-column: 1 / -1;
-    padding-right: 1rem;
+    padding-right: 15px;
 
-    font: 3rem "inter Light";
+    font: 3rem "Inter Light";
     letter-spacing: 5px;
     text-align: right;
 
@@ -84,6 +84,7 @@
     background-color: transparent;
     color: inherit;
 
+    opacity: 1;
     text-overflow: ellipsis;
 
     &::placeholder {
@@ -99,15 +100,15 @@
 
 .calc-body>button {
     font: 2rem "Inter Thin";
+    user-select: none;
+    appearance: none;
+    -webkit-apearance: none;
 
     border: 0.1px solid $text-color-black;
     background-color: inherit;
     color: inherit;
 
     cursor: pointer;
-    user-select: none;
-    appearance: none;
-    --webkit-apearance: none;
 
     &:active {
         border-color: transparent;
